--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,4 +23,4 @@ jobs:
         run: docker compose up -d --build
 
       - name: Ping API
-        run: curl -X GET http://localhost:6007/
+        run: curl -X GET http://127.0.0.1:6007/
