--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Build Docker image
         run: docker compose up -d --build
 
+      - name: Wait for the API to be ready
+        run: sleep 10  # Подождите 10 секунд перед выполнением запроса
+
       - name: Ping API
         run: curl -X GET http://127.0.0.1:6007/
