--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
     ports:
-      - "6007:6007"
-    restart: unless-stopped
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  python-app:
+    build: .
+    environment:
+      DATABASE_URL: postgres://user:password@db:5432/mydb
+    depends_on:
+      - db
+    ports:
+      - "8000:8000"
+
+volumes:
+  postgres_data:
