--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - db
     ports:
       - "6007:6007"
-    command: ["./wait-for-it.sh", "db:5432", "--", "python", "app.py"]  # Ждем, пока база данных будет готова, прежде чем запускать Flask-приложение
+    command: ["./wait-for-it.sh", "db:5432", "--", "python", "app.py"]
 
 volumes:
   postgres_data:
