--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,9 @@ jobs:
         run: docker compose up -d --build
 
       - name: logging
-        run: docker logs db
+        run: |
+          sleep 20
+          docker logs db
       # Шаг 4: Проверка состояния контейнера PostgreSQL и перезапуск если нужно
       - name: Restart database if stopped
         run: |
