--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,13 +36,13 @@ jobs:
           echo "Container is running."
 
       # Шаг 5: Проверка доступности базы данных
-      - name: Wait for database to be ready
-        run: |
-          until curl --silent --fail db:5432; do
-            echo "Waiting for database to be ready..."
-            sleep 2
-          done
-          echo "Database is ready!"
+      #- name: Wait for database to be ready
+       # run: |
+        #  until curl --silent --fail db:5432; do
+         #   echo "Waiting for database to be ready..."
+          #  sleep 2
+          #done
+          #echo "Database is ready!"
 
       # Шаг 6: Подождать, пока API будет готово
       - name: Wait for the API to be ready
