--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,10 +49,12 @@ jobs:
       # Шаг 6: Подождать, пока API будет готово
       - name: Wait for the API to be ready
         run: sleep 10
-
+        
+      - name: logs1
+        run: docker logs pythondevops-python-app-1
       # Шаг 7: Проверка доступности API
       - name: Ping API
-        run: |
-          docker logs pythondevops-python-app-1
-          curl -X GET --fail http://127.0.0.1:6007 || exit 1
-          docker logs pythondevops-python-app-1
+        run: curl -X GET --fail http://127.0.0.1:6007 || exit 1
+          
+      - name: logs1
+        run: docker logs pythondevops-python-app-1
