--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - db
     ports:
       - "6007:6007"
-    command: ["bash", "-c", "./wait-for-it.sh db:5432 -- python app.py"]
+    command: ["python", "app.py"]
 
 volumes:
   postgres_data:
